# Intro-Design-Patterns-Cpp-Qt5

./: CMakeLists.txt
modelview/: CMakeLists.txt
modelview/filesystem/: CMakeLists.txt
modelview/multiview/: CMakeLists.txt
modelview/playlists/: CMakeLists.txt
